<resources>
    <string name="app_name">Kids Learning App - AllinOne</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>


    <string name="banner_home_footer">ca-app-pub-1702190522169883/8030346455</string>
    <string name="interstitial_full_screen">ca-app-pub-1702190522169883/9507079651</string>

</resources>
